--- a/src/app/modules/user/layouts/photos/photos.component.css
+++ b/src/app/modules/user/layouts/photos/photos.component.css
@@ -1,15 +1,9 @@
-.container{
-  display: flex;
-  flex-direction : column;
-  align-items : center;
-  gap: 20px;
-}
-video {
-  height: 300px;
-}
 
-.buttons{
-  display: flex;
-  justify-content : center;
-  gap: 10px
+img,video {
+  height: 250px;
 }
+ @media (min-width: 520px) {
+  img,video {
+      height: 500px;
+    }
+ }
