--- a/src/app/modules/user/layouts/photos/photos.component.html
+++ b/src/app/modules/user/layouts/photos/photos.component.html
@@ -1,3 +1,4 @@
+<ng-container *ngIf="showCamera">
 <div class="container d-flex flex-column" *ngIf="!takePhotoClick">
   <video #videoPlayer>
   </video>
@@ -40,3 +41,4 @@
     </form>
   </div>
 </div>
+</ng-container>
