--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-4 border">
       <div class="row" *ngFor="let chatRoom of chatRooms">
-          <div class="col d-flex align-items-center justify-content-left link-chat border" (click)="openChat(chatRoom.users[0].id)" >
+          <div class="col d-flex align-items-center justify-content-left link-chat border" (click)="openChat(chatRoom)" >
               <p *ngIf="chatRoom.users[0].uid === uid; else test">
               <strong class="">{{chatRoom.users[1].pseudo}}</strong></p>
               <ng-template #test><strong>{{chatRoom.users[0].pseudo}}</strong></ng-template>
@@ -12,7 +12,7 @@
     <div class="col-8 border">
 
       <span *ngIf="chatRoomsForComponentChat !== undefined">
-        <app-chat  [chatRoomsForComponentChat]="chatRoomsForComponentChat"  [messageRoom]="messageRoom"></app-chat>
+        <app-chat  [chatRoomsForComponentChat]="chatRoomsForComponentChat"  [messageRoom]="messagesRoom"></app-chat>
       </span>
     </div>
   </div>
