--- a/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
@@ -3,9 +3,9 @@
       <div class="card-header">
         <div class="row row-cols-3">
           <div class="col-7 d-flex align-items-center">
-              <div class="content-img" [style.background-image]="'url(' + user.profilImage+ ')'">
+              <div class="content-img" [style.background-image]="'url(' + (user | async)?.profilImage+ ')'">
               </div>
-              <div class="ms-2">{{ user.pseudo }}</div>
+              <div class="ms-2">{{ (user | async)?.pseudo }}</div>
           </div>
           <div class="col-5 d-flex align-items-center text-center justify-content-center">
             <div class="tx-11 me-2 text-muted">{{ image.createDate.toDate() | date:'dd / MM / yyyy'  }}</div>
