--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -18,7 +18,7 @@
             <p class="pseudo">{{ user.pseudo }}</p>
           </div>
           <div class="col-4 text-center">
-            <span class="fw-bold">{{ imageLength }}</span>
+            <span class="fw-bold">{{ (images | async)?.length }}</span>
             <br>
             <span class="secondTitleNumber">Publications</span>
           </div>
@@ -52,10 +52,10 @@
             </button>
 
             <button class="btn btn-secondary w-25 btn-sm mt-2" (click)="onFollowUser()">
-              <span *ngIf="!user.followers.includes(userId)">
+              <span *ngIf="!currentUser.follows.includes(user.id)">
                 Follow
               </span>
-              <span *ngIf="user.followers.includes(userId)">
+              <span *ngIf="currentUser.follows.includes(user.id)">
                 Unfollow
               </span>
             </button>
@@ -66,7 +66,7 @@
   </div>
   <div class="container border mt-5" >
     <div class="row gy-5 py-5" >
-      <div class="col-12 col-md-6 col-lg-4 col-xl-3" *ngFor="let image of images">
+      <div class="col-12 col-md-6 col-lg-4 col-xl-3" *ngFor="let image of images | async">
         <img [src]="image.path" style="height: 300px; width : 300px" >
       </div>
     </div>
