--- a/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/card-image.component.html
@@ -29,7 +29,7 @@
                   <i class="bi bi-heart-fill" [style.color]="likedImage"></i>
                   <div class="d-none d-md-block ms-2">Like</div>
               </a>
-              <a class="d-flex align-items-center text-muted me-4">
+              <a (click)="openDialog()" class="d-flex align-items-center text-muted me-4">
                   <i class="bi bi-chat-dots"></i>
                   <div class="d-none d-md-block ms-2">Comment</div>
               </a>
