--- a/src/app/modules/user/layouts/chat/chat.component.scss
+++ b/src/app/modules/user/layouts/chat/chat.component.scss
@@ -31,3 +31,10 @@
     height: 250px;
   }
 }
+.messenger{
+  height: 350px;
+  overflow-y: scroll;
+}
+.messenger::-webkit-scrollbar {
+  display: none;
+}
