--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -1,20 +1,21 @@
-<div class="container border mt-5 mainContainer">
-  <div class="row">
-    <div class="col-4 border">
+<div class="container border rounded-1 mt-5 mainContainer">
+  <div class="row h-100">
+    <div class="col-4">
       <div class="row" *ngFor="let chatRoom of chatRooms">
-          <div class="col d-flex align-items-center justify-content-left link-chat border" (click)="openChat(chatRoom)" >
-              <p *ngIf="chatRoom.users[0].uid === uid; else test">
-              <strong class="">{{chatRoom.users[1].pseudo}}</strong></p>
-              <ng-template #test><strong>{{chatRoom.users[0].pseudo}}</strong></ng-template>
-          </div>
+        <div class="col d-flex align-items-center justify-content-left link-chat border-bottom"
+          (click)="openChat(chatRoom)">
+          <p class="my-5" *ngIf="chatRoom.users[0].uid === uid; else test">
+            <strong class="">{{chatRoom.users[1].pseudo}}</strong>
+          </p>
+          <ng-template #test class="my-5"><strong>{{chatRoom.users[0].pseudo}}</strong></ng-template>
+        </div>
       </div>
     </div>
-    <div class="col-8 border">
-
-      <span *ngIf="chatRoomsForComponentChat !== undefined">
-        <app-chat  [chatRoomsForComponentChat]="chatRoomsForComponentChat"  [messageRoom]="messagesRoom"></app-chat>
-      </span>
+    <div class="col-8 border-start">
+      <div *ngIf="chatRoomsForComponentChat !== undefined">
+        <app-chat class="h-100" [chatRoomsForComponentChat]="chatRoomsForComponentChat" [messageRoom]="messagesRoom">
+        </app-chat>
+      </div>
     </div>
   </div>
 </div>
-
