--- a/src/app/modules/user/layouts/chat-list/chat-list.component.scss
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.scss
@@ -1,5 +1,4 @@
 .link-chat {
-  background-color: #ffffff;
   text-decoration: none;
   cursor: pointer;
   height: 2rem;
@@ -8,7 +7,7 @@
   background-color: #e4e4e4;
 }
 .mainContainer{
-  height: 100%;
+  height: 650px;
   width: 100%;
   display: flex;
   flex-direction: column;
