--- a/src/app/modules/user/layouts/chat/chat.component.html
+++ b/src/app/modules/user/layouts/chat/chat.component.html
@@ -1,10 +1,12 @@
-<div class="card-header">
+<div class="col-12">
+  <div class="card-header">
     <div class="row">
       <div class="col-md-5">
         <span *ngIf="chatRoomsForComponentChat.users[0].uid === uid; else testImage">
           <img class="img imgProfil rounded-circle" src="{{chatRoomsForComponentChat.users[1].profilImage}}">
         </span>
-        <ng-template #testImage><img class="img imgProfil rounded-circle" src="{{chatRoomsForComponentChat.users[0].profilImage}}"></ng-template>
+        <ng-template #testImage><img class="img imgProfil rounded-circle"
+            src="{{chatRoomsForComponentChat.users[0].profilImage}}"></ng-template>
       </div>
       <div class="col-md-7">
         <span *ngIf="chatRoomsForComponentChat.users[0].uid === uid; else test">
@@ -12,26 +14,39 @@
         </span>
         <ng-template #test><strong>{{chatRoomsForComponentChat.users[0].pseudo}}</strong></ng-template>
       </div>
+      <hr>
     </div>
+  </div>
 </div>
 
-<div style="height: 250px; overflow-y: scroll">
-    <div *ngFor="let message of messageRoom | async" [ngClass]="uid === message.uid_user ? 'text-end' : 'text-start'">
+<div class="col-12">
+  <div class="messenger" ngSwipe (swipeMove)="onSwipeMove($event)" (swipeEnd)="onSwipeEnd($event)">
+    <div *ngFor=" let message of messageRoom | async" [ngClass]="uid === message.uid_user ? 'text-end' : 'text-start'">
       <div *ngIf="chatRoomsForComponentChat.users[0].uid === message.uid_user; else testMessage">
-        <span class="bg-info">{{message.message}}</span>
+        <span class="bg-info">{{message.message}}
+        </span>
       </div>
-      <ng-template #testMessage><span class="bg-danger">{{message.message}}</span></ng-template>
+      <ng-template #testMessage>
+        <span class="bg-danger">{{message.message}}
+        </span>
+      </ng-template>
+      <div class="text-end" *ngIf="TEST">
+        {{
+        message.date_created | date: 'HH:mm'
+        }}
+      </div>
       <p>
         <small>{{message.pseudo_user}}</small>
       </p>
     </div>
+  </div>
 </div>
 
-<form (ngSubmit)="onSubmit()" class="mt-5">
-  <input type="text"  class="form-control" [formControl]="message" #messageInput>
-  <button type="submit" color="primary">
-    Envoyer
-  </button>
-</form>
-
-
+<div class="col-12">
+  <form (ngSubmit)="onSubmit()" class="mt-5">
+    <input type="text" class="form-control" [formControl]="message" #messageInput>
+    <button type="submit" color="primary">
+      Envoyer
+    </button>
+  </form>
+</div>
