--- a/src/app/modules/user/layouts/home/components/card-image/dialog-comment/dialog-comment.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/dialog-comment/dialog-comment.component.html
@@ -12,14 +12,16 @@
 
       <div class="row">
         <div class="col-3">
-         <!-- <img class="img imgProfil rounded-circle" src="{{ (getUser(comment.userId) | async)?.profilImage }}"> -->
           {{ comment.fullName }}
         </div>
-        <div class="col-6">
+        <div class="col-5">
           {{ comment.comment }}
         </div>
         <div class="col-3">
           {{ comment.createDate.toDate() | date:'dd / MM / yyyy' }}
+        </div>
+        <div class="col-1" *ngIf="comment.userId === currentUser.id">
+          <i class="bi bi-trash" (click)="deleteComment(comment)" style="cursor: pointer"></i>
         </div>
       </div>
 
