Add scanner qr code component and package install

--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -43,7 +43,10 @@
       </form>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item px-3 px-md-0">
-          <a class="nav-link active" [routerLink]="['/user/home']"><i class="bi bi-house-door-fill"></i></a>
+          <a class="nav-link" [routerLink]="['/user/home']"><i class="bi bi-house-door"></i></a>
+        </li>
+        <li class="nav-item px-3 px-md-0">
+          <a class="nav-link" [routerLink]="['/user/scannerQrcode']"><i class="bi bi-qr-code-scan"></i></a>
         </li>
         <li class="nav-item px-3 px-md-0">
           <a class="nav-link" [routerLink]="['/user/photos']"><i class="bi bi-camera"></i>
