--- a/src/app/modules/user/layouts/home/home.component.html
+++ b/src/app/modules/user/layouts/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="mainHome container-fluid mx-auto pt-5 pb-5">
   <div class="container">
-    <ng-container *ngFor="let image of listImages | async">
-      <div class="row justify-content-center h-100">
+    <ng-container *ngFor="let image of images$ | async">
+      <div class="row justify-content-center">
         <div class="col mw-50">
           <app-card-image [image]="image" [currentUser]="user"></app-card-image>
         </div>
