--- a/src/app/modules/user/layouts/chat/chat.component.html
+++ b/src/app/modules/user/layouts/chat/chat.component.html
@@ -1,59 +1,68 @@
-<div class="col-12">
-  <div class="card-header">
-    <div class="row" b *ngIf="chatRoomsForComponentChat.user.length > 0">
-      <div class="col-md-5">
-        <img class="img imgProfil rounded-circle" src="{{chatRoomsForComponentChat.user[0].profilImage}}">
+<div>
+  <div class="col-12">
+    <div class="card-header">
+      <div class="row" *ngIf="chatRoomsForComponentChat.user.length > 0">
+        <div class="col-md-5">
+          <img class="img imgProfil rounded-circle" src="{{chatRoomsForComponentChat.user[0].profilImage}}">
+        </div>
+        <div class="col-md-7">
+          <strong class="">{{chatRoomsForComponentChat.user[0].pseudo}}</strong>
+        </div>
+        <hr>
       </div>
-      <div class="col-md-7">
-        <strong class="">{{chatRoomsForComponentChat.user[0].pseudo}}</strong>
-      </div>
-      <hr>
     </div>
   </div>
-</div>
-
-<div class="col-12">
-  <div class="messenger" ngSwipe (swipeMove)="onSwipeMove($event)" (swipeEnd)="onSwipeEnd($event)">
-    <div *ngFor=" let message of messageRoom | async"
-      [ngClass]="user[0].uid === message.uid_user ? 'text-end' : 'text-start'">
-      <div *ngIf="user[0].uid === message.uid_user; else testMessage">
-        <span class="bg-info" (dblclick)="doubleclick()">
-          <input type="text" value="{{message.message}}" [disabled]="!isTrue" #newMessage id="newMessage" name="newMessage" >
-        </span>
-      </div>
-      <ng-template #testMessage>
-        <span class="bg-danger">{{message.message}}
-        </span>
-      </ng-template>
-      <div class="text-end" *ngIf="TEST">
-        {{
-        message.date_created | date: 'HH:mm'
-        }}
-      </div>
-      <p *ngIf="user[0].uid === message.uid_user; else pseudoMessage">
-        {{user[0].pseudo}}
-      </p>
-      <ng-template #pseudoMessage>
-        <p>
-          <small>{{chatRoomsForComponentChat.user[0].pseudo}}</small>
+  <div class="col-12">
+    <div class="messenger" ngSwipe (swipeMove)="onSwipeMove($event)" appClickOutsideMessage
+      (clickedOutside)="handleChange()">
+      <div *ngFor=" let message of messageRoom | async"
+        [ngClass]="user[0].uid === message.uid_user ? 'text-end' : 'text-start'">
+        <div *ngIf="user[0].uid === message.uid_user; else testMessage">
+          <span class="bg-info" (dblclick)="doubleclick(message.id)">
+            <span *ngIf="isTrue && message_id === message.id; else notDisabled">
+              <input type="text" value="{{message.message}}" [disabled]="false" id="{{message.id}}" name="newMessage"
+                [(ngModel)]="message.message">
+            </span>
+            <ng-template #notDisabled>
+              <input type="text" value="{{message.message}}" [disabled]="true" id="{{message.id}}" name="newMessage"
+                [(ngModel)]="message.message">
+            </ng-template>
+          </span>
+        </div>
+        <ng-template #testMessage>
+          <span class="bg-danger">{{message.message}}
+          </span>
+        </ng-template>
+        <div class="text-end" *ngIf="TEST">
+          {{
+          message.date_created | date: 'HH:mm'
+          }}
+        </div>
+        <p *ngIf="user[0].uid === message.uid_user; else pseudoMessage">
+          {{user[0].pseudo}}
         </p>
-      </ng-template>
-      <div *ngIf="user[0].uid === message.uid_user && isTrue">
-        <span>
-          <button (click)="update(message)" >modifier</button>
-          |
-          <a (click)="delete(message.id)">supprimer</a>
-        </span>
+        <ng-template #pseudoMessage>
+          <p>
+            <small>{{chatRoomsForComponentChat.user[0].pseudo}}</small>
+          </p>
+        </ng-template>
+        <div *ngIf="user[0].uid === message.uid_user && isTrue && message_id === message.id">
+          <span>
+            <button class="btn btn-sm" type="button" (click)="update(message, message.message)"
+              [disabled]="message.message === ''">modifier</button>
+            |
+            <button class="btn btn-sm" (click)="delete(message.id)">supprimer</button>
+          </span>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
-<div class="col-12">
-  <form (ngSubmit)="onSubmit()" class="mt-5">
-    <input type="text" class="form-control" [formControl]="message" #messageInput>
-    <button type="submit" color="primary">
-      Envoyer
-    </button>
-  </form>
+  <div class="col-12">
+    <form (ngSubmit)="onSubmit()" class="mt-5">
+      <input type="text" class="form-control" [formControl]="message" #messageInput>
+      <button type="submit" color="primary">
+        Envoyer
+      </button>
+    </form>
+  </div>
 </div>
