--- a/src/app/modules/user/layouts/chat-list/chat-list.component.scss
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.scss
@@ -6,10 +6,36 @@
 .link-chat:hover {
   background-color: #e4e4e4;
 }
-.mainContainer{
-  height: 650px;
+.mainContainer {
+  height: 80%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-top: 30px;
+  @media (min-width: 768px) {
+    margin-top: 3rem !important;
+  }
+}
+.test {
+  @media (min-width: 768px) {
+    border-left: 1px solid #dee2e6;
+  }
+}
+
+.listConversation {
+  display: none;
+  max-height: 170px;
+  @media (min-width: 768px) {
+    max-height: 100%;
+  }
+  overflow-y: scroll;
+}
+.listConversation::-webkit-scrollbar {
+  display: none;
+}
+
+.toggle {
+  font-size: 1.25rem;
+  cursor: pointer;
 }
