--- a/src/app/modules/user/layouts/chat/chat.component.scss
+++ b/src/app/modules/user/layouts/chat/chat.component.scss
@@ -1,40 +1,43 @@
 .imgProfil {
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   object-fit: cover;
   background-size: cover;
 
-  @media (min-width: 425px) {
-    width: 120px;
-    height: 120px;
-  }
-
-  @media (min-width: 575px) {
-    width: 135px;
-    height: 135px;
-  }
-
-  @media (min-width: 768px) {
-    width: 150px;
-    height: 150px;
-  }
-
-  // Large devices (desktops, 992px and up)
-  @media (min-width: 992px) {
-    width: 180px;
-    height: 180px;
-  }
-
-  // X-Large devices (large desktops, 1200px and up)
-  @media (min-width: 1200px) {
-    width: 250px;
-    height: 250px;
+  @media (max-width: 425px) {
+    width: 100px;
+    height: 100px;
   }
 }
-.messenger{
-  height: 350px;
+.messenger {
+  height: 430px;
   overflow-y: scroll;
 }
 .messenger::-webkit-scrollbar {
   display: none;
+}
+
+.bulle {
+  border: 1px solid #dee2e6;
+  border-radius: 10px;
+  padding: 3px;
+}
+
+.messenger {
+  input {
+    border: none;
+    background: none;
+    &:focus {
+      border: none;
+      outline: none !important;
+    }
+  }
+  .btn {
+    text-decoration: underline;
+    &:focus {
+      outline: none;
+      box-shadow: none;
+      border: none;
+    }
+  }
 }
