--- a/src/app/modules/user/layouts/edit-profil/edit-profil.component.html
+++ b/src/app/modules/user/layouts/edit-profil/edit-profil.component.html
@@ -1,53 +1,93 @@
-<div class="main container-fluid">
+<div class="container-fluid">
   <div class="container mx-auto">
-    <button [routerLink]="['/user/profil/'+user?.id]" class="btn btn-secondary">Annuler</button>
     <h2 class="text-center mb-5 mt-3" style="white-space: nowrap">
       Modifier mon profil
     </h2>
     <form (ngSubmit)="onSubmit()">
       <div class="row text-center mb-5">
         <div class="col-12 mb-3">
-          <img class="rounded-circle imgProfil" [style.background-image]="'url(' + user?.profilImage + ')'">
+          <img
+            class="rounded-circle imgProfil"
+            [style.background-image]="'url(' + user?.profilImage + ')'"
+          />
         </div>
         <div class="col-12">Modifier la photo de profil</div>
       </div>
       <div class="mb-3 row">
         <label class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="text" readonly class="form-control-plaintext" id="staticEmail" value="{{ user?.email }}" />
+          <input
+            type="text"
+            readonly
+            class="form-control-plaintext"
+            id="staticEmail"
+            value="{{ user?.email }}"
+          />
         </div>
       </div>
       <div class="mb-3 row">
         <label for="lastName" class="col-sm-2 col-form-label">Nom</label>
         <div class="col-sm-10">
-          <input type="text" value="{{ user?.lastName }}" [formControl]="lastname" class="form-control"
-            id="lastName" />
+          <input
+            type="text"
+            value="{{ user?.lastName }}"
+            [formControl]="lastname"
+            class="form-control"
+            id="lastName"
+          />
         </div>
       </div>
       <div class="mb-3 row">
         <label for="lastName" class="col-sm-2 col-form-label">Prénom</label>
         <div class="col-sm-10">
-          <input type="text" value="{{ user?.firstName }}" [formControl]="firstname" class="form-control"
-            id="lastName" />
+          <input
+            type="text"
+            value="{{ user?.firstName }}"
+            [formControl]="firstname"
+            class="form-control"
+            id="lastName"
+          />
         </div>
       </div>
       <div class="mb-3 row">
-        <label for="pseudo" class="col-sm-2 col-form-label">Nom d'utilisateur</label>
+        <label for="pseudo" class="col-sm-2 col-form-label"
+          >Nom d'utilisateur</label
+        >
         <div class="col-sm-10">
-          <input type="text" value="{{ user?.pseudo }}" [formControl]="pseudo" class="form-control" id="pseudo" />
+          <input
+            type="text"
+            value="{{ user?.pseudo }}"
+            [formControl]="pseudo"
+            class="form-control"
+            id="pseudo"
+          />
         </div>
       </div>
       <div class="mb-3 row">
         <label for="bio" class="col-sm-2 col-form-label">Bio</label>
         <div class="col-sm-10">
-          <textarea id="bio" rows="5" cols="33" type="text" value="{{ user?.bio }}" [formControl]="bio"
-            class="form-control">
+          <textarea
+            id="bio"
+            rows="5"
+            cols="33"
+            type="text"
+            value="{{ user?.bio }}"
+            [formControl]="bio"
+            class="form-control"
+          >
             It my story...
           </textarea>
         </div>
       </div>
       <div class="text-center mt-5">
-        <button type="submit" class="btn btn-secondary">Terminé</button>
+        <button
+          [routerLink]="['/user/profil/' + user?.id]"
+          class="btn btn-secondary me-1"
+        >
+          Annuler
+        </button>
+
+        <button type="submit" class="btn btn-secondary ms-1">Terminé</button>
       </div>
     </form>
   </div>
