--- a/src/app/modules/user/layouts/home/components/card-image/card-image.component.scss
+++ b/src/app/modules/user/layouts/home/components/card-image/card-image.component.scss
@@ -19,3 +19,10 @@
     cursor: pointer;
   }
 }
+
+.textDate {
+  white-space: nowrap;
+  @media screen and (max-width: 375px) {
+    display: none;
+  }
+}
