--- a/src/app/modules/user/layouts/home/components/card-image/dialog-comment/dialog-comment.component.html
+++ b/src/app/modules/user/layouts/home/components/card-image/dialog-comment/dialog-comment.component.html
@@ -7,22 +7,30 @@
   </div>
 </div>
 <div mat-dialog-content>
-  <div style="height: 450px; overflow-y: scroll">
+  <div style="height: 450px; overflow-y: scroll; overflow-x: hidden">
     <div *ngFor="let comment of image.comments.sort(this.compareComment)">
-
       <div class="row">
-        <div class="col-3">
-         <!-- <img class="img imgProfil rounded-circle" src="{{ (getUser(comment.userId) | async)?.profilImage }}"> -->
-          {{ comment.fullName }}
+        <div class="col-10">
+          <strong tyle="white-space: nowrap">{{ comment.fullName }}</strong>
+          <p>
+            {{ comment.comment }}
+            <br />
+            <small style="white-space: nowrap">
+              {{ comment.createDate.toDate() | date: "dd / MM / yyyy" }}
+            </small>
+          </p>
         </div>
-        <div class="col-6">
-          {{ comment.comment }}
-        </div>
-        <div class="col-3">
-          {{ comment.createDate.toDate() | date:'dd / MM / yyyy' }}
+        <div
+          class="col-2 text-end pe-4"
+          *ngIf="comment.userId === currentUser.id"
+        >
+          <i
+            class="bi bi-trash"
+            (click)="deleteComment(comment)"
+            style="cursor: pointer"
+          ></i>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -30,15 +38,16 @@
     <mat-error *ngIf="comment.hasError('minlength')">
       150 caractères maximum
     </mat-error>
-    <div class="row">
-      <div class="col-8">
-        <input type="text" placeholder="150 caractères maximum..." class="form-control" maxlength="150" [formControl]="comment" #commentInput>
-      </div>
-      <div class="col-4">
-        <button mat-button type="submit" color="primary">
-          Envoyer
-        </button>
-      </div>
+    <div class="input-group">
+      <input
+        type="text"
+        placeholder="150 caractères maximum..."
+        class="form-control"
+        maxlength="150"
+        [formControl]="comment"
+        #commentInput
+      />
+      <button class="btn btn-outline-secondary" type="submit">Envoyer</button>
     </div>
   </form>
 </div>
