--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -68,6 +68,11 @@
             ></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/user/scannerQrcode']"
+              ><i class="bi bi-qr-code-scan"></i
+            ></a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" [routerLink]="['/user/photos']"
               ><i class="bi bi-camera"></i>
             </a>
