--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="col-12 col-md-8 border-md-start test">
+    <div class="col-12 col-md-8 border-md-start colChat">
       <div *ngIf="chatRoomsForComponentChat !== undefined" class="h-100">
         <app-chat
           [chatRoomsForComponentChat]="chatRoomsForComponentChat"
