--- a/src/app/modules/user/layouts/chat-list/chat-list.component.scss
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.scss
@@ -17,7 +17,7 @@
     margin-top: 3rem !important;
   }
 }
-.test {
+.colChat {
   @media (min-width: 768px) {
     border-left: 1px solid #dee2e6;
   }
