--- a/src/app/modules/user/layouts/chat-list/chat-list.component.html
+++ b/src/app/modules/user/layouts/chat-list/chat-list.component.html
@@ -2,7 +2,7 @@
   <div class="row h-100">
     <div class="col-12 col-md-4">
       <div class="d-flex justify-content-between d-md-none">
-        <div>Mes conversations</div>
+        <div><h3>Mes conversations</h3></div>
         <div (click)="clickEvent()" class="toggle">
           <i [ngClass]="status ? 'bi bi-dash' : 'bi bi-plus'"></i>
         </div>
@@ -25,7 +25,11 @@
       </div>
     </div>
     <div class="col-12 col-md-8 border-md-start colChat">
-      <div *ngIf="chatRoomsForComponentChat !== undefined" class="h-100">
+      <div
+        *ngIf="chatRoomsForComponentChat !== undefined"
+        class="h-100"
+        [ngClass]="!status ? 'd-block' : 'd-none d-md-block'"
+      >
         <app-chat
           [chatRoomsForComponentChat]="chatRoomsForComponentChat"
           [messageRoom]="messagesRoom"
