--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -36,9 +36,15 @@
             {{ user.firstName }} {{ user.lastName }}
           </div>
           <div class="col-12">{{ user.bio }}</div>
-          <div class="col-12" *ngIf="isUserCo">
+          <div class="col-12 ifUserCo" *ngIf="isUserCo">
             <button
-              class="btn btn-secondary w-100 btn-sm mt-2"
+              class="btn btn-secondary btn-sm mt-2 btnQrcode me-1"
+              (click)="openDialog()"
+            >
+              Open QrCode
+            </button>
+            <button
+              class="btn btn-secondary btn-sm mt-2 btnEdit ms-1"
               routerLink="/user/edit-profil"
             >
               Modifier le profil
@@ -64,7 +70,12 @@
             >
               Ecrire
             </button>
-
+            <button
+              class="btn btn-secondary btn-sm mt-2"
+              (click)="openDialog()"
+            >
+              Open QrCode
+            </button>
             <button
               class="btn btn-secondary btn-sm mt-2"
               (click)="onFollowUser()"
@@ -76,24 +87,31 @@
                 Unfollow
               </span>
             </button>
-            <button
-              class="btn btn-secondary btn-sm mt-2"
-              (click)="openDialog()"
-            >
-              Open QrCode
-            </button>
           </div>
         </div>
       </div>
     </div>
   </div>
   <div class="container border border-bottom-0 mt-5">
-    <div class="row" style="margin-bottom: 50px">
+    <div class="row">
       <div
         class="col-12 col-md-6 col-lg-4 py-3"
         *ngFor="let image of images | async"
       >
         <img [src]="image.path" class="img-thumbnail img-fluid h-100 w-100" />
+        <div class="d-flex post-actions">
+          <a (click)="like()" class="d-flex align-items-center text-muted me-4">
+            <i class="bi bi-heart-fill" [style.color]="likedImage"></i>
+            <div class="d-none d-md-block ms-2">Like</div>
+          </a>
+          <a
+            (click)="openDialogComment()"
+            class="d-flex align-items-center text-muted me-4"
+          >
+            <i class="bi bi-chat-dots"></i>
+            <div class="d-none d-md-block ms-2">Comment</div>
+          </a>
+        </div>
       </div>
     </div>
   </div>
